WIP: File->Open, new Settings. Sign and TextAlign to own files.